test/unit-tests/errors/match-error.spec.d.ts
export declare class MatchErrorTests {
    shouldStoreMessage(expectedMessage: string): void;
    shouldStoreExpectedValue(expectedValue: any): void;
    shouldStoreActualValue(actualValue: any): void;
}
